# OpenJoystick

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: joystick.h
src/exe/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  joystick.cpp
